<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">交达科技</string>
    <!--login -->
    <string name="login_user_name">用户名：</string>
    <string name="login_user_name_hint">请输入您的用户名</string>
    <string name="login_password">密   码：</string>
    <string name="server_address">服务器地址：</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="save_username">记住用户名</string>
    <string name="save_password">记住密码</string>
    <string name="modify_password">修改密码</string>
    <string name="login">登陆</string>
    <!--modify password-->
    <string name="modifypass_user_name">用户名:</string>
    <string name="modifypass_old_password">旧密码:</string>
    <string name="modifypass_new_password">新密码:</string>
    <string name="modifypass_confirm_password">确认新密码:</string>
    <string name="modifypass_confirm">确认</string>
    <string name="modifypass_cancel">取消</string>
    <!--mission list-->
    <string name="list_detial">查看</string>
    <string name="list_print">打印</string>
    <string name="list_mission_number">任务编号：</string>
    <string name="list_car_number">车牌号：</string>
    <string name="list_task_type">任务类型：</string>
    <string name="list_device_number">设备编号：</string>
    <string name="list_task_date">任务日期：</string>
    <string name="list_print_date">打印日期：</string>
    <!--mission detail-->
    <string name="mission_task_num">任务编号：</string>
    <string name="mission_car_num">车牌号：</string>
    <string name="mission_work_type">经营类型：</string>
    <string name="mission_driver_name">驾驶员姓名：</string>
    <string name="mission_task_type">任务类型：</string>
    <string name="mission_driver_telephone">驾驶员电话：</string>
    <string name="mission_car_device_num">设备编号：</string>
    <string name="mission_car_card_num">通信卡号：</string>
    <string name="mission_end_date">到期日期：</string>
    <string name="mission_task_date">任务日期：</string>
    <string name="mission_task_description">任务说明：</string>
    <string name="mission_device_company">设备厂家：</string>
    <string name="mission_device_type">设备型号：</string>
    <string name="mission_device_num">设备编号：</string>
    <string name="mission_card_num">通信卡号：</string>
    <string name="mission_distribute_description">分配说明：</string>
    <string name="back">返回</string>
    <!--缴费-->
    <string name="cost">费用：</string>
    <string name="pick_end_date">选择到期日期</string>
    <string name="pick_date">选择日期</string>
    <string name="yuan">元</string>
    <string name="input_charge">输入费用</string>
    <!--server add-->
    <string name="input_server_hint">输入要连接的服务器地址</string>
    <string name="pick_server">选定</string>
    <!--维修-->
    <string name="input_device_company">输入设备厂家</string>
    <string name="input_device_type">输入设备型号</string>
    <string name="input_device_num">输入设备编号</string>
    <string name="input_card_num">输入通信卡号</string>
    <string name="belong_company">所属单位：</string>
    <string name="belong_region">所属区所：</string>
    <string name="car_device_type">设备型号：</string>
    <string name="car_device_company">设备厂家：</string>
    
    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
