<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/header" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_task_num" />

            <TextView
                android:id="@+id/mission_charge_task_num_tv"
                style="@style/task_list_content" />

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_car_num" />

            <TextView
                android:id="@+id/mission_charge_car_num_tv"
                style="@style/task_list_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_work_type" />

            <TextView
                android:id="@+id/mission_charge_work_type_tv"
                style="@style/task_list_content" />

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_driver_name" />

            <TextView
                android:id="@+id/mission_charge_driver_name_tv"
                style="@style/task_list_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_task_type" />

            <TextView
                android:id="@+id/mission_charge_task_type_tv"
                style="@style/task_list_content" />

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_driver_telephone" />

            <TextView
                android:id="@+id/mission_charge_driver_telephone_tv"
                style="@style/task_list_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_car_device_num" />

            <TextView
                android:id="@+id/mission_charge_car_device_num_tv"
                style="@style/task_list_content" />

            <TextView
                style="@style/task_list_tag"
                android:text="@string/mission_car_card_num" />

            <TextView
                android:id="@+id/mission_charge_car_card_num_tv"
                style="@style/task_list_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/list_bar_back"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/mission_end_date"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mission_charge_end_date_edt"
                android:editable="false"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="输入到期日期" />
            <Button 
                android:id="@+id/mission_charge_pick_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择日期"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/cost"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mission_charge_cost_edt"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/yuan"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="horizontal" >

			<Button 
			    android:id="@+id/mission_charge_print_btn"
			    android:layout_width="100dp"
			    android:layout_height="40dp"
			    android:background="@drawable/btnblue_sel"
			    android:textColor="#FFFFFF"
			    android:text="@string/list_print"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>