<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_default_backcolor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/act_default_backcolor"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/header" >
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_task_num" />

                    <TextView
                        android:id="@+id/mission_mantenance_task_num_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_task_type" />

                    <TextView
                        android:id="@+id/mission_mantenance_task_type_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/belong_region" />

                    <TextView
                        android:id="@+id/mission_mantenance_area_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/belong_company" />

                    <TextView
                        android:id="@+id/mission_mantenance_company_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_driver_name" />

                    <TextView
                        android:id="@+id/mission_mantenance_driver_name_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_driver_telephone" />

                    <TextView
                        android:id="@+id/mission_mantenance_driver_telephone_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_car_num" />

                    <TextView
                        android:id="@+id/mission_mantenance_car_num_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_device_company" />

                    <TextView
                        android:id="@+id/mission_mantenance_device_company_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_device_type" />

                    <TextView
                        android:id="@+id/mission_mantenance_device_type_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_device_num" />

                    <TextView
                        android:id="@+id/mission_mantenance_device_num_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout style="@style/task_list_item_linear_tag" >

                    <TextView
                        style="@style/task_detail_singleline_tag"
                        android:text="@string/mission_card_num" />

                    <TextView
                        android:id="@+id/mission_mantenance_card_num_tv"
                        style="@style/task_list_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/mission_mantenance_print_btn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
						android:textSize="@dimen/medium_text_size"
                        android:background="@drawable/btnblue_sel"
                        android:text="@string/list_print"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>